--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-flow-renderer": "^9.5.1",
     "react-scripts": "4.0.3",
+    "react-use": "^17.2.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
